<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_activity_login_username"
        style="@style/width_fill_parent"
        android:hint="@string/login_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:inputType="phone|textEmailAddress"
        android:padding="@dimen/edittext_padding"
        android:drawableLeft="@drawable/icon_account"
        android:background="@drawable/edittext_shape_top"
        android:drawablePadding="@dimen/edittext_padding" />

    <EditText
        android:id="@+id/user_activity_login_password"
        style="@style/width_fill_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="@dimen/edittext_padding"
        android:drawableLeft="@drawable/icon_pwd"
        android:background="@drawable/edittext_shape_bottom"
        android:drawablePadding="@dimen/edittext_padding" />

    <LinearLayout
        style="@style/width_fill_parent"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/user_activity_login_register"
            style="@style/width_zero_fix"
            android:background="@drawable/btn_selector_blue"
            android:text="@string/register"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/user_activity_login_login"
            style="@style/width_zero_fix"
            android:background="@drawable/btn_selector_login"
            android:text="@string/login"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_activity_login_forget_pwd"
        style="@style/none_fill_parent"
        android:text="@string/forget_password"
        android:layout_gravity="right"
        android:layout_marginRight="20dp" />

    <TextView
        style="@style/none_fill_parent"
        android:text="@string/login_unsupport"
        android:layout_gravity="center"
        android:layout_margin="20dp" />
</LinearLayout>
