<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_activity_register_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_activity_register_pwd"
        style="@style/width_fill_parent"
        android:hint="@string/password_setting"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:padding="@dimen/edittext_padding"
        android:background="@drawable/edittext_shape_top"
        android:drawableRight="@drawable/password_hint" />

    <EditText
        android:id="@+id/user_activity_register_nickname"
        style="@style/width_fill_parent"
        android:hint="@string/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:padding="@dimen/edittext_padding"
        android:background="@drawable/edittext_shape_mid"
        android:drawableRight="@drawable/nickname_hint" />

    <EditText
        android:id="@+id/user_activity_register_email"
        style="@style/width_fill_parent"
        android:hint="@string/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:text="nniuwei@163.com"
        android:padding="@dimen/edittext_padding"
        android:background="@drawable/edittext_shape_bottom"
        android:drawableRight="@drawable/email_hint" />

    <TextView
        android:id="@+id/user_activity_register_submit"
        style="@style/width_fill_parent"
        android:background="@drawable/btn_selector_login"
        android:text="@string/done"
        android:padding="10dp"
        android:textAppearance="@style/white_24"
        android:gravity="center"
        android:layout_margin="20dp" />
</LinearLayout>
