<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <framework.ui.common.SegmentedGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:id="@+id/nav_energy_segment"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/nav_energy_segment_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barChart"
            style="@style/RadioButton" />
        <RadioButton
            android:id="@+id/nav_energy_segment_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lineChart"
            style="@style/RadioButton" />
        <RadioButton
            android:id="@+id/nav_energy_segment_pie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pieChart"
            style="@style/RadioButton" />
    </framework.ui.common.SegmentedGroup>
</LinearLayout>