<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_forget_password_id"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_activity_forget_telephone"
        style="@style/width_fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:inputType="phone|textEmailAddress"
        android:hint="@string/forget_pwd"
        android:padding="@dimen/edittext_padding"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:visibility="visible"
        android:background="@drawable/edittext_shape_corners" />

    <EditText
        android:id="@+id/user_activity_forget_verify"
        style="@style/width_fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:inputType="phone|textEmailAddress"
        android:hint="@string/verify"
        android:padding="@dimen/edittext_padding"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:visibility="gone"
        android:background="@drawable/edittext_shape_corners" />

    <TextView
        android:id="@+id/user_activity_forget_next"
        style="@style/width_fill_parent"
        android:background="@drawable/btn_selector_login"
        android:text="@string/next"
        android:padding="10dp"
        android:gravity="center"
        android:layout_margin="20dp" />
</LinearLayout>
