<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_light">

    <RelativeLayout
        style="@style/width_fill_parent"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/none_fill_parent"
            android:text="@string/guesture_pwd"
            android:padding="15dp"
            android:textAppearance="@style/black_18" />

        <ImageView
            android:id="@+id/gesturepwd_open_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_switch_yes"
            android:contentDescription="@string/app_name"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/doct_list_item_divider" />

    <RelativeLayout
        style="@style/width_fill_parent"
        android:background="@color/white">

        <TextView
            style="@style/none_fill_parent"
            android:text="@string/show_gesture_track"
            android:padding="15dp"
            android:textAppearance="@style/black_18" />

        <ImageView
            android:id="@+id/gesturepwd_show_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_switch_yes"
            android:contentDescription="@string/app_name"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/doct_list_item_divider" />

    <RelativeLayout
        android:id="@+id/gesturepwd_change_pwd"
        style="@style/width_fill_parent"
        android:background="@drawable/clickd_gray">

        <TextView
            style="@style/none_fill_parent"
            android:text="@string/change_guesture"
            android:padding="15dp"
            android:textAppearance="@style/black_18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_arrow"
            android:contentDescription="@string/app_name"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gesturepwd_forget_pwd"
        style="@style/width_fill_parent"
        android:background="@drawable/clickd_gray"
        android:layout_marginTop="@dimen/dp_margin_20">

        <TextView
            style="@style/none_fill_parent"
            android:text="@string/forget_guesture"
            android:padding="15dp"
            android:textAppearance="@style/black_18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_arrow"
            android:contentDescription="@string/app_name"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>
</LinearLayout>
