<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <!--头像-->
        <RelativeLayout
            android:id="@+id/portrait_setting"
            android:layout_width="fill_parent"
            android:paddingLeft="25dp" android:paddingRight="25dp" android:paddingTop="15dp" android:paddingBottom="15dp"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            >
            <TextView
                android:id="@+id/portrait__null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/black_18"
                android:layout_marginRight="40dp"
                android:text="@string/portrait"/>
            <ImageView
                android:id="@+id/portrait_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/portrait__null"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/right_arrow"/>
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_line"/>
        <!--昵称-->
        <RelativeLayout
            android:id="@+id/nickname_setting"
            android:layout_width="fill_parent"
            android:paddingLeft="25dp" android:paddingRight="25dp" android:paddingTop="15dp" android:paddingBottom="15dp"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            >
            <TextView
                android:id="@+id/portrait_nickname_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/black_18"
                android:layout_marginRight="40dp"
                android:text="@string/nickname"/>
            <TextView
                android:id="@+id/portrait_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/black_18"
                android:layout_toRightOf="@id/portrait_nickname_null"
                android:text="未遂1995"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/right_arrow"/>
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_line"/>
        <!--性别-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:paddingLeft="25dp" android:paddingRight="25dp" android:paddingTop="15dp" android:paddingBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/portrait_gender_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/black_18"
                android:layout_marginRight="40dp"
                android:layout_centerVertical="true"
                android:text="@string/gender"/>
            <RadioGroup
                android:id="@+id/zixun_gnnder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/portrait_gender_null"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/zixun_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/man_selected_bg"
                    android:checked="false"/>
                <RadioButton
                    android:id="@+id/zixun_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/woman_selected_bg"
                    android:checked="true"/>
            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/user_activity_register_submit"
        style="@style/width_fill_parent"
        android:background="@drawable/btn_selector_login"
        android:text="@string/save"
        android:padding="10dp"
        android:textAppearance="@style/white_24"
        android:gravity="center"
        android:layout_margin="20dp" />
</LinearLayout>